ストロングパラメータ設定

--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,6 +3,8 @@
 <p>
   <strong>Content:</strong>
   <%= @blog.content %>
+  <strong>Image:</strong>
+  <%= image_tag @feed.image.url %>
 </p>
 
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
