--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,7 +4,7 @@
   <strong>Content:</strong>
   <%= @blog.content %>
   <strong>Image:</strong>
-  <%= image_tag @feed.image.url %>
+  <%= image_tag @blog.image.url %>
 </p>
 
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
