--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -1,17 +1,18 @@
 <h1>確認画面</h1>
 <%= form_with(model: @blog, url: blogs_path, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
+  <p>本文:<%= @blog.content %></p>
+ 
   <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
-<%# エラー解消の為 %>
-  <%= form.hidden_field :content %>
+
   <%= form.hidden_field :image_cache %>
-<%# 　エラー解消の為記載 %>
-　<p>本文:<%= @blog.content %></p>
-  <%= form.submit "投稿する" %>
+  <%= form.hidden_field :content %>
+  <br><%= form.submit "投稿する" %>
 <% end %>
 
 <%= form_with(model:@blog, url:new_blog_path, local:true, method:"get") do |form| %>
   <%= form.hidden_field :image_cache %>
+  <%= form.hidden_field :content %>
   <%= form.submit "戻る", name: "back" %>
 <% end %>
 
