--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -14,6 +14,7 @@
     <% @blogs.each do |blog| %>
       <tr>
         <td><%= blog.content %></td>
+        <td><%= image_tag(blog.image.url) if blog.image && blog.image.url %></td>
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
