--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th>Content</th>
+      <th>Image</th>
+      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,6 +17,7 @@
       <tr>
         <td><%= blog.content %></td>
         <td><%= image_tag(blog.image.url) if blog.image && blog.image.url %></td>
+        <td><%= blog.user.name%></td>
         <td><%= link_to 'Show', blog %></td>
         <td><%= link_to 'Edit', edit_blog_path(blog) %></td>
         <td><%= link_to 'Destroy', blog, method: :delete, data: { confirm: 'Are you sure?' } %></td>
