--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Blog</h1>
 
-<%= render 'form', blog: @blog %>
+<%= render 'editform', blog: @blog %>
 
 <%= link_to 'Show', @blog %> |
 <%= link_to 'Back', blogs_path %>
