--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,15 @@
     <% end %>
 
     <% if logged_in? %>
-      <%= link_to "Profile", user_path(current_user.id) %>
-      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+    <ul class="nav nav-tabs">
+      <li role="presentation"><%= link_to "Profile", user_path(current_user.id) %></li>
+      <li role="presentation"><%= link_to "Logout", session_path(current_user.id), method: :delete %></li>
+    </ul>
     <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
+    <ul class="nav nav-tabs">
+      <li role="presentation"><%= link_to "Sign up", new_user_path %></li>
+      <li role="presentation"><%= link_to "Login", new_session_path %></li>
+    </ul>
     <% end %>
 
     <%= yield %>
